--- a/test2/test2.vcxproj.filters
+++ b/test2/test2.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClInclude Include="components\Button.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="components\Lable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
