--- a/test2/test2.vcxproj
+++ b/test2/test2.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="components\Button.cpp" />
+    <ClCompile Include="components\GlobalState.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="components\Button.h" />
+    <ClInclude Include="components\GlobalState.h" />
     <ClInclude Include="components\Lable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
