--- a/test2/test2.vcxproj.filters
+++ b/test2/test2.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="components\Button.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="components\GlobalState.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="openal32.dll" />
@@ -40,6 +43,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="components\Lable.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="components\GlobalState.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
