--- a/test2/test2.vcxproj.filters
+++ b/test2/test2.vcxproj.filters
@@ -40,6 +40,7 @@
     <None Include="sfml-system-d-2.dll" />
     <None Include="sfml-window-2.dll" />
     <None Include="sfml-window-d-2.dll" />
+    <None Include="save.json" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="components\Button.h">
