--- a/test2/test2.vcxproj.filters
+++ b/test2/test2.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="components\SimpleButton.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="components\UpgraidButton.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
