--- a/test2/test2.vcxproj
+++ b/test2/test2.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="components\GlobalState.h" />
     <ClInclude Include="components\Lable.h" />
     <ClInclude Include="components\SimpleButton.h" />
+    <ClInclude Include="components\UpgraidButton.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
